Fix spacing in footer

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -1,3 +1,4 @@
 .footer {
+  list-style-type: none;
   text-decoration: none;
 }
